...
                        
                        GroupBox {
                            Toggle(isOn: $editCompleted) {
                                Text("Completed")
                            }
                            .tint(.end)
                            .accessibilityIdentifier("completedToggle")
                        }
                        .backgroundStyle(GroupBoxBackgroundStyle())

                        GroupBox {
                            Toggle(isOn: $editFlagged) {
                                HStack(spacing: 15) {
...
                                        Text(editingAssignedProjects ? "Done" : "Edit")
                                            .font(.headline)
                                            .fontWeight(.bold)
                                            .tint(editingAssignedProjects ? .end : .accent)
                                    }
                                    .padding(.trailing, 10)
                                    .accessibilityIdentifier("editAssignedProjectsButton")
                                }
                                projectsList
                                    .offset(x: -5)
                            }
                        }
                        .backgroundStyle(GroupBoxBackgroundStyle())
...
            }

            .navigationBarTitleDisplayMode(.inline)
            .navigationTitle("Details")
            .toolbar {
                ToolbarItem(placement: .primaryAction) {
                    doneButton
                }
                ToolbarItem(placement: .topBarLeading) {
                    cancelButton
                }
            }
            .background(Color.background.ignoresSafeArea())
...
        Picker("pomosEstimate", selection: $editPomosEstimate) {
            Text("< 1").tag(0)
            ForEach(1...6, id: \.self) { i in
                Text("\(i)").tag(i)
            }
        }
        .accessibilityIdentifier("pomosEstimatePicker")
        .pickerStyle(SegmentedPickerStyle())
        if editPomosEstimate >= 0 {
            deselect(for: $editPomosEstimate)
        }
    }

...
        Picker("pomosActual", selection: $editPomosActual) {
            Text("< 1").tag(0)
            ForEach(1...6, id: \.self) { i in
                Text("\(i)").tag(i)
            }
        }
        .accessibilityIdentifier("pomosActualPicker")
        .pickerStyle(SegmentedPickerStyle())
        if editPomosActual >= 0 {
            deselect(for: $editPomosActual)
        }
    }

...
