...
                .textCase(.uppercase)
                .font(.system(.footnote, design: .rounded, weight: .medium))
                .foregroundStyle(.barRest)
                .brightness(colorScheme == .dark ? 0.4 : -0.1)
                .saturation(colorScheme == .dark ? 1.5 : 0.9)
        }
        .accessibilityIdentifier("addProjectButton")
    }

    @ViewBuilder private var projectHeaderChevronButton: some View {
        Button(action: {
            withAnimation(.spring()) {
                isCollapsed.value = true
...
                .background(
                    RoundedRectangle(cornerRadius: 8).fill(.barRest)
                        .brightness(colorScheme == .dark ? -0.5 : 0.3)
                        .saturation(colorScheme == .dark ? 0.8 : 0.7)
                )
        }
        .accessibilityIdentifier("collapseProjectStackButton")
    }
}

