...
                }
                .tag(0)
            TaskList()
                .toasts(bottomPadding: 50)
                .tabItem {
                    Label { Text("Tasks") } icon: { Image(.pomoChecklist) }
                        .accessibilityIdentifier("taskList")
                }
                .tag(1)
                .badge(errors.coreDataError != nil ? "!" : nil)
            ChartsPage()
                .toasts()
                .tabItem {
...
